--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "api"
     ],
     "homepage": "https://www.smobilpay.cm",
-    "license": "apache2",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "maviance",
