--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,10 @@
         {
             "name": "maviance",
             "homepage": "https://www.smobilpay.cm"
+        },
+        {
+            "name": "camoo",
+            "homepage": "https://www.camoo.cm"
         }
     ],
     "require": {
