--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,19 @@
         {
             "name": "maviance",
             "homepage": "https://www.smobilpay.cm"
+        },
+        {
+            "name": "camoo",
+            "homepage": "https://www.camoo.cm"
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=8.1",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2",
-        "ramsey/uuid": "@stable"
+        "ramsey/uuid": "@stable",
+        "guzzlehttp/guzzle": "^7.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
