--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "payments",
         "api"
     ],
+    "version":"v2.0.0",
     "homepage": "https://www.smobilpay.cm",
     "license": "Apache-2.0",
     "authors": [
